[package]
name = "kona-plasma"
description = "Plasma Data Availability Adapter"
version = "0.0.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Workspace
anyhow.workspace = true
tracing.workspace = true
alloy-consensus.workspace = true
alloy-primitives = { workspace = true, features = ["rlp"] }
async-trait.workspace = true

# Local
kona-primitives = { path = "../primitives", version = "0.0.2" }
kona-derive = { path = "../derive", version = "0.0.3" }

# `serde` feature dependencies
serde = { version = "1.0.203", default-features = false, features = ["derive"], optional = true }

# `online` feature dependencies
alloy-transport-http = { version = "0.2", optional = true } 
alloy-provider = { version = "0.2", default-features = false, optional = true }
reqwest = { version = "0.12", default-features = false, optional = true }

[dev-dependencies]
kona-derive = { path = "../derive", features = ["test-utils"] }
serde_json = { version = "1.0.117", default-features = false }
tokio = { version = "1.38", features = ["full"] }
tracing-subscriber = "0.3.18"

[features]
default = ["serde"]
serde = [
  "dep:serde",
  "kona-primitives/serde",
  "alloy-primitives/serde",
  "alloy-consensus/serde",
  "kona-derive/serde",
]
online = [
  "dep:alloy-provider",
  "dep:alloy-transport-http",
  "dep:reqwest",
  "alloy-provider/reqwest",
  "alloy-consensus/serde",
]
