[package]
name = "kona-preimage"
description = "Bindings and types for interacting with the PreimageOracle ABI"
version = "0.0.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# workspace
anyhow.workspace = true
cfg-if.workspace = true
tracing.workspace = true
alloy-primitives.workspace = true
async-trait.workspace = true

# local
kona-common = { path = "../common", version = "0.0.3" }
rkyv = { version = "0.7.44", optional = true }
serde = { version = "1.0.203", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }
os_pipe = "1.2.1"

[features]
default = []
rkyv = ["dep:rkyv"]
serde = ["dep:serde"]
