[package]
name = "kona-preimage"
description = "Bindings and types for interacting with the PreimageOracle ABI"
version = "0.0.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# General
noerror.workspace = true
tracing.workspace = true
alloy-primitives.workspace = true
async-trait.workspace = true

# Workspace
kona-common.workspace = true

# `rkyv` feature dependencies
rkyv = { workspace = true, optional = true }

# `serde` feature dependencies
serde = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
os_pipe.workspace = true

[features]
default = []
rkyv = ["dep:rkyv"]
serde = ["dep:serde"]
