[package]
name = "kona-preimage"
description = "Bindings and types for interacting with the PreimageOracle ABI"
version = "0.0.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# General
tracing.workspace = true
derive_more = { workspace = true, features = ["full"] }
async-trait.workspace = true
alloy-primitives.workspace = true

# Workspace
kona-common.workspace = true

# `rkyv` feature dependencies
rkyv = { workspace = true, optional = true }

# `serde` feature dependencies
serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
os_pipe.workspace = true
tokio = { workspace = true, features = ["full"] }

[features]
default = []
rkyv = ["dep:rkyv"]
serde = ["dep:serde"]
