[package]
name = "kona-primitives"
description = "Primitive types for kona crates"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# General
anyhow.workspace = true
spin.workspace = true

hashbrown.workspace = true

# Alloy
alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-rlp = { workspace = true, features = ["derive"] }
alloy-primitives = { workspace = true, features = ["rlp"] }
op-alloy-consensus.workspace = true

# SCR Repo Primitives
superchain-primitives.workspace = true

# `serde` feature dependencies
serde = { workspace = true, optional = true }

# `online` feature dependencies
tracing = { workspace = true, optional = true }
revm = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
c-kzg = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "superchain-primitives/serde"]
online = ["dep:c-kzg", "dep:sha2", "dep:revm", "dep:tracing", "revm/default"]
