[package]
name = "kona-providers-alloy"
description = "Alloy provider implementations for Kona"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# Alloy
alloy-eips = { workspace = true, features = ["kzg"] }
alloy-transport.workspace = true
alloy-provider = { workspace = true, features = ["reqwest"] }
alloy-rlp = { workspace = true, features = ["derive"] }
alloy-consensus = { workspace = true, features = ["k256", "serde", "std"] }
alloy-primitives = { workspace = true, features = ["rlp", "k256", "serde"] }

# OP Alloy
op-alloy-consensus = { workspace = true, features = ["k256"] }
op-alloy-protocol = { workspace = true, features = ["serde", "std"] }
op-alloy-genesis = { workspace = true, features = ["serde", "std"] }

# General
lru.workspace = true
serde.workspace = true
alloy-serde.workspace = true
reqwest.workspace = true
tracing.workspace = true
async-trait.workspace = true

# Workspace
kona-providers.workspace = true
kona-derive = { workspace = true, features = ["serde"] }

# `metrics` feature dependencies
lazy_static = { workspace = true, optional = true }
prometheus = { workspace = true, optional = true }

# `test-utils` feature dependencies
thiserror = { workspace = true, optional = true }
alloy-rpc-client = { workspace = true, optional = true }
alloy-node-bindings = { workspace = true, optional = true }
alloy-transport-http = { workspace = true, optional = true, features = ["reqwest"] } 

[dev-dependencies]
tokio.workspace = true
thiserror.workspace = true
serde_json.workspace = true
alloy-rpc-client.workspace = true
alloy-node-bindings.workspace = true
alloy-transport-http.workspace = true
kona-providers = { workspace = true, features = ["test-utils"] }
kona-derive = { workspace = true, features = ["serde", "test-utils"] }

[features]
default = []
metrics = ["dep:prometheus", "dep:lazy_static"]
test-utils = [
  "dep:thiserror", 
  "dep:alloy-rpc-client",
  "dep:alloy-node-bindings",
  "dep:alloy-transport-http",
  "kona-derive/test-utils",
  "kona-providers/test-utils",
]
