[package]
name = "simple-revm"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
anyhow = { version = "1.0.82", default-features = false }
kona-common = { path = "../../crates/common" }
kona-preimage = { path = "../../crates/preimage" }
revm = { version = "8.0.0", default-features = false }
