[package]
name = "simple-revm"
version = "0.1.0"
publish = false
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
revm.workspace = true
cfg-if.workspace = true

kona-common = { path = "../../crates/common" }
kona-common-proc = { path = "../../crates/common-proc" }
kona-preimage = { path = "../../crates/preimage" }

[[bin]]
name = "simple-revm"
path = "src/main.rs"
