[package]
name = "trusted-sync"
version = "0.1.0"
publish = false
description = "Derives and validates payloads using a trusted source"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Workspace Dependencies
anyhow.workspace = true
tracing.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
kona-derive = { path = "../../crates/derive", version = "0.0.2", features = ["serde", "k256", "online", "metrics"] }

# Custom dependencies
lazy_static = "1.5.0"
tracing-loki = "0.2.5"
reqwest = "0.12"
actix-web = "4.8.0"
prometheus = { version = "0.13.4", features = ["process"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
serde = { version = "1.0.198", features = ["derive"] }
alloy-provider = { version = "0.2", default-features = false }
alloy-rpc-types = { version = "0.2" }
alloy-transport = { version = "0.2", default-features = false }
