[package]
name = "trusted-sync"
version = "0.1.0"
publish = false
description = "Derives and validates payloads using a trusted source"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Workspace
kona-derive.workspace = true
kona-primitives = { workspace = true, features = ["serde"] }
kona-providers-alloy = { workspace = true, features = ["metrics"] }

# General
anyhow.workspace = true
lazy_static.workspace = true
tracing-loki.workspace = true
reqwest.workspace = true
actix-web.workspace = true
prometheus.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true

# Alloy
superchain.workspace = true
alloy-rpc-types = { workspace = true, features = ["eth"] }
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-provider = { workspace = true, default-features = false }
alloy-transport = { workspace = true, default-features = false }
op-alloy-genesis.workspace = true
op-alloy-rpc-types-engine.workspace = true
alloy-rpc-types-engine.workspace = true
