[package]
name = "cannon-rs-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
cannon-mipsevm = { git = "https://github.com/anton-rs/cannon-rs" }
preimage-oracle = { git = "https://github.com/anton-rs/cannon-rs" }
anyhow = "1.0.79"
sha2 = "0.10.8"
alloy-primitives = "0.6.2"

[profile.dev]
overflow-checks = false
