[package]
name = "kona-proof-interop"
description = "OP Stack Proof SDK with Interop support"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
kona-preimage.workspace = true
kona-interop.workspace = true
kona-proof.workspace = true

# Maili
maili-registry.workspace = true
maili-genesis = { workspace = true, features = ["serde"] }

# Alloy
alloy-rlp.workspace = true
alloy-primitives.workspace = true

# General
serde.workspace = true
tracing.workspace = true
serde_json.workspace = true

# Arbitrary
arbitrary = { version = "1.4", features = ["derive"], optional = true }

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["rlp", "arbitrary"] }
kona-interop = { workspace = true, features = ["arbitrary"] }
arbitrary = { version = "1.4", features = ["derive"] }
rand.workspace = true

[features]
arbitrary = ["dep:arbitrary", "alloy-primitives/arbitrary", "kona-interop/arbitrary"]
