[package]
name = "kona-proof"
description = "OP Stack Proof SDK"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
kona-mpt.workspace = true
kona-derive.workspace = true
kona-driver.workspace = true
kona-preimage.workspace = true
kona-executor.workspace = true

# Alloy
alloy-rlp.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true

# Op Alloy
op-alloy-registry.workspace = true
op-alloy-protocol.workspace = true
op-alloy-consensus.workspace = true
op-alloy-genesis = { workspace = true, features = ["serde"] }
op-alloy-rpc-types-engine = { workspace = true, features = ["serde"] }

# General
lru.workspace = true
spin.workspace = true
serde.workspace = true
tracing.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true

# `std` feature dependencies
tokio = { workspace = true, features = ["full"], optional = true }

[features]
std = ["dep:tokio"]
