[package]
name = "kona-std-fpvm"
description = "Platform specific APIs for interacting with Fault Proof VM kernels."
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
kona-preimage.workspace = true

# External
cfg-if.workspace = true
thiserror.workspace = true
linked_list_allocator.workspace = true
async-trait.workspace = true

# `tracing` feature dependencies
tracing = { workspace = true, optional = true }

[features]
tracing = ["dep:tracing"]
